Add Pagination and Sort
